--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -495,6 +495,12 @@ h6,
   color: #ffffff;
   font-size: 20px;
 }
+#header2-v .mbr-section-text {
+  text-align: center;
+}
+#header2-v .mbr-section-title {
+  text-align: left;
+}
 #ext_menu-s .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -556,10 +562,4 @@ h6,
 #ext_menu-s .link[aria-expanded="true"],
 #ext_menu-s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
-}
-#header1-t .mbr-section-lead {
-  text-align: left;
-}
-#header1-t .mbr-section-title {
-  font-size: 30px;
 }
