--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1442,3 +1442,146 @@ h6,
 #ext_menu-34 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
+#msg-box2-3c .mbr-section-title {
+  color: #fff;
+  font-size: 48px;
+}
+#msg-box2-3c .mbr-section-subtitle {
+  color: #ffffff;
+  font-size: 20px;
+}
+#form1-3i .form-control-label {
+  color: #232323;
+}
+#ext_menu-3f .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-3f .navbar-caption {
+  color: #ffffff;
+  font-size: 25px;
+}
+#ext_menu-3f .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-3f .close-icon::before,
+#ext_menu-3f .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-3f .link,
+#ext_menu-3f .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-3f .link {
+  font-size: 0.9rem;
+}
+#ext_menu-3f .dropdown-item,
+#ext_menu-3f .nav-dropdown-sm .link {
+  font-size: 0.975rem;
+}
+#ext_menu-3f .link:hover,
+#ext_menu-3f .dropdown-item:hover,
+#ext_menu-3f .link:focus,
+#ext_menu-3f .dropdown-item:focus {
+  color: #c1c1c1;
+}
+#ext_menu-3f .link[aria-expanded="true"],
+#ext_menu-3f .dropdown-menu {
+  background: #055b5b;
+}
+#ext_menu-3f .nav-dropdown-sm .link:focus,
+#ext_menu-3f .nav-dropdown-sm .link:hover,
+#ext_menu-3f .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3f .nav-dropdown-sm .dropdown-item:hover {
+  background: #077d7d!important;
+}
+#ext_menu-3f .navbar,
+#ext_menu-3f .nav-dropdown-sm,
+#ext_menu-3f .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3f .nav-dropdown-sm .dropdown-menu {
+  background: #088b8b;
+}
+#ext_menu-3f .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-3f .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-3f .bg-color.transparent.opened .link:hover,
+#ext_menu-3f .bg-color.transparent.opened .link:focus {
+  color: #c1c1c1;
+}
+#ext_menu-3f .link[aria-expanded="true"],
+#ext_menu-3f .dropdown-item[aria-expanded="true"] {
+  color: #c1c1c1!important;
+}
+#msg-box2-3k .mbr-section-title {
+  color: #fff;
+  font-size: 48px;
+}
+#msg-box2-3k .mbr-section-subtitle {
+  color: #ffffff;
+  font-size: 20px;
+}
+#ext_menu-3m .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-3m .navbar-caption {
+  color: #ffffff;
+  font-size: 25px;
+}
+#ext_menu-3m .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-3m .close-icon::before,
+#ext_menu-3m .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-3m .link,
+#ext_menu-3m .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-3m .link {
+  font-size: 0.9rem;
+}
+#ext_menu-3m .dropdown-item,
+#ext_menu-3m .nav-dropdown-sm .link {
+  font-size: 0.975rem;
+}
+#ext_menu-3m .link:hover,
+#ext_menu-3m .dropdown-item:hover,
+#ext_menu-3m .link:focus,
+#ext_menu-3m .dropdown-item:focus {
+  color: #c1c1c1;
+}
+#ext_menu-3m .link[aria-expanded="true"],
+#ext_menu-3m .dropdown-menu {
+  background: #055b5b;
+}
+#ext_menu-3m .nav-dropdown-sm .link:focus,
+#ext_menu-3m .nav-dropdown-sm .link:hover,
+#ext_menu-3m .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-3m .nav-dropdown-sm .dropdown-item:hover {
+  background: #077d7d!important;
+}
+#ext_menu-3m .navbar,
+#ext_menu-3m .nav-dropdown-sm,
+#ext_menu-3m .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-3m .nav-dropdown-sm .dropdown-menu {
+  background: #088b8b;
+}
+#ext_menu-3m .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-3m .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-3m .bg-color.transparent.opened .link:hover,
+#ext_menu-3m .bg-color.transparent.opened .link:focus {
+  color: #c1c1c1;
+}
+#ext_menu-3m .link[aria-expanded="true"],
+#ext_menu-3m .dropdown-item[aria-expanded="true"] {
+  color: #c1c1c1!important;
+}
