create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -487,11 +487,11 @@ h6,
 #header1-g .mbr-section-title {
   font-size: 30px;
 }
-#msg-box2-q .mbr-section-title {
+#msg-box2-3t .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-q .mbr-section-subtitle {
+#msg-box2-3t .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -563,11 +563,11 @@ h6,
 #ext_menu-s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-w .mbr-section-title {
+#msg-box2-3u .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-w .mbr-section-subtitle {
+#msg-box2-3u .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -633,11 +633,11 @@ h6,
 #ext_menu-z .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-15 .mbr-section-title {
+#msg-box2-3x .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-15 .mbr-section-subtitle {
+#msg-box2-3x .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -716,11 +716,11 @@ h6,
 #ext_menu-17 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-1c .mbr-section-title {
+#msg-box2-3y .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-1c .mbr-section-subtitle {
+#msg-box2-3y .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -790,11 +790,11 @@ h6,
 #ext_menu-1e .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-1k .mbr-section-title {
+#msg-box2-41 .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-1k .mbr-section-subtitle {
+#msg-box2-41 .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -867,11 +867,11 @@ h6,
 #ext_menu-1m .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-1q .mbr-section-title {
+#msg-box2-42 .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-1q .mbr-section-subtitle {
+#msg-box2-42 .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -950,11 +950,11 @@ h6,
 #ext_menu-1s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-1w .mbr-section-title {
+#msg-box2-44 .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-1w .mbr-section-subtitle {
+#msg-box2-44 .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -1035,11 +1035,11 @@ h6,
 #ext_menu-1y .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-21 .mbr-section-title {
+#msg-box2-47 .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-21 .mbr-section-subtitle {
+#msg-box2-47 .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -1120,11 +1120,11 @@ h6,
 #ext_menu-23 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-26 .mbr-section-title {
+#msg-box2-48 .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-26 .mbr-section-subtitle {
+#msg-box2-48 .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -1205,11 +1205,11 @@ h6,
 #ext_menu-28 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-2b .mbr-section-title {
+#msg-box2-4b .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-2b .mbr-section-subtitle {
+#msg-box2-4b .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -1284,11 +1284,11 @@ h6,
 #ext_menu-2d .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-2q .mbr-section-title {
+#msg-box2-4c .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-2q .mbr-section-subtitle {
+#msg-box2-4c .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -1368,11 +1368,11 @@ h6,
 #ext_menu-2s .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-30 .mbr-section-title {
+#msg-box2-4e .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-30 .mbr-section-subtitle {
+#msg-box2-4e .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -1442,11 +1442,11 @@ h6,
 #ext_menu-34 .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-3c .mbr-section-title {
+#msg-box2-4g .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-3c .mbr-section-subtitle {
+#msg-box2-4g .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
@@ -1515,11 +1515,11 @@ h6,
 #ext_menu-3f .dropdown-item[aria-expanded="true"] {
   color: #c1c1c1!important;
 }
-#msg-box2-3k .mbr-section-title {
+#msg-box2-4i .mbr-section-title {
   color: #fff;
   font-size: 48px;
 }
-#msg-box2-3k .mbr-section-subtitle {
+#msg-box2-4i .mbr-section-subtitle {
   color: #ffffff;
   font-size: 20px;
 }
