create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -411,13 +411,11 @@ h6,
 .scrollToTop_wraper {
   opacity: 0 !important;
 }
-#msg-box2-o .mbr-section-title {
+#msg-box2-4o .mbr-section-title {
   color: #fff;
-  font-size: 48px;
 }
-#msg-box2-o .mbr-section-subtitle {
+#msg-box2-4o .mbr-section-subtitle {
   color: #ffffff;
-  font-size: 20px;
 }
 #msg-box1-3q H2 {
   color: #ffffff;
